# .dotfiles

./: .git-sops-diff  .gitattributes  .gitignore  .gitmodules  .sops.yaml  AGENTS.md  BEADS_BRANCH_SETUP.md  README.md  all-packages.txt  all_packages.txt  machines.py  mimeapps.list  rofimoji.rc  setup.py
.beads/: .gitignore
.claude/: CLAUDE.md  settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
alacritty/: alacritty.toml  alacritty.yml
atuin/: config.toml
btop/: btop.conf
dunst/: dunst.conf  dunst.config  dunst.config_default  dunst_rofi_dmenu.sh
environment.d/: theme.conf
fastfetch/: config.jsonc
fd/: .fdignore
fish/: README.md  config.fish  fish_variables
foot/: foot.ini
fzf-tab/: fzf-tab.zsh
helix/: config.toml  ignore  languages.toml
hypr/: active_keybinds.conf  env.conf  hypridle.conf  hypridle_immediate.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  keybinds.conf  keybinds_source.conf  launch.conf  launch_apps.json  monitors.conf  pyprland.toml  windowrules.conf  workspaces.conf
ignore/: ignore
kanata/: TOGGLE_KEY_EXAMPLES.md  config.kbd
kitty/: current-theme.conf  kitty.conf  kitty.conf.bkup_bkup
lazygit/: config.yml  state.yml
linuxmini/config/scripts/hyprland/hypr_window_ops/: pyproject.toml
linuxmini/config/scripts/hyprland/hypr_window_ops/hypr_window_ops/: app_launcher.py  cli.py  focus_location.py  launch_apps.py  monitor_movement.py  move_windows.py  stash_manager.py  switch_ws_on_monitor.py
linuxmini/python-tools/cjar/: .gitignore  README.md  pyproject.toml
linuxmini/python-tools/cjar/.claude/: settings.local.json
linuxmini/python-tools/cjar/cjar/: cli.py  cookie_ops.py  table_ops.py
linuxmini/python-tools/kanata-tools/: pyproject.toml
mc/: ini
(+1277 files in other folders)
