[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypr-window-ops"
version = "0.1.0"
description = "Utilities for managing Hyprland windows, workspaces, and profiles"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "User", email = "user@example.com"}
]
license = {text = "MIT"}

[project.scripts]
hypr-window-ops = "hypr_window_ops.cli:main"

[tool.setuptools]
packages = ["hypr_window_ops"]